# mechanise

./: Cargo.toml  README.md  notes.md  prooompt.txt  sonnet_oneshot_test.md
src/: anthropic_types.rs  images.rs  lib.rs  main.rs  notes.md  requests.rs  responses.rs  streaming.rs
test_assets/: raw_chunk.jsonl
