[package]
name = "mechanise"
license = "MIT"
version = "0.0.1"
edition = "2021"
publish = true
description = """
THIS IS A WIP! (But the simplest functionality there)

A, _hopefully_ Rusty wrapper for the Anthropic REST API for Anthropic's `claude` and maybe someday others...

Note: This API was in part created with tools like Anthropic's Claude and Sonnet models, along with Gemini, ChatGPT4, and Phind.

"""
authors = ["jer, <alphastrata@gmail.com>"]
readme = "./README.md"
keywords = ["Anthropic", "claude", "claude3", "Text-Generation", "LLM"]
repository = "https://github.com/alphastrata/mechanise"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
log = "0.4.20"
futures-util = "0.3.30"
bytes = "1.5.0"
regex = "1.10.3"
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
