[package]
name = "mechanise"
license = "MIT"
version = "0.0.1"
edition = "2021"
publish = true
description = """
A, _hopefully_ Rusty wrapper for the Anthropic REST API for Anthropic's `claude` and maybe someday others...

Note: This API was in part created with Anthropic's Sonnet model.
"""
authors = ["jer, <alphastrata@gmail.com>"]
readme = "./README.md"
keywords = ["Anthropic", "claude", "claude3", "Text-Generation", "LLM"]
repository = "https://github.com/alphastrata/mechanise"


[features]
default = ["logging", "streaming"]
streaming = ["dep:futures-util", "dep:regex", "dep:once_cell", "dep:bytes", "reqwest/stream"]
logging = ["dep:log", "dep:pretty_env_logger"]


[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"

# Optionals:
log = {version="0.4.20", optional=true}
pretty_env_logger = {version="0.5.0", optional=true}
futures-util = { version = "0.3.30", optional = true }
bytes = { version = "1.5.0", optional = true }
regex = { version = "1.10.3", optional = true }
once_cell = { version = "1.19.0", optional = true }
